# evollm-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: config.py  main.py  requirements.txt
backend/adapters/: __init__.py  auto_detect.py  base.py  openevolve_adapter.py  registry.py  shinka_adapter.py
backend/api/: analytics.py  conversations.py  experiments.py  islands.py  metrics.py  programs.py  websocket.py
backend/models/: __init__.py  api.py  unified.py
backend/services/: change_detection.py  experiment_manager.py
configs/projects/: openevolve.py  shinkaevolve.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  router.jsx
frontend/src/hooks/: useAnalytics.js  useExperiments.js  useFrameworks.js  useKeyboardShortcuts.js  useLineage.js  useMetrics.js  usePrograms.js  useRefreshInterval.js  useWebSocket.js
frontend/src/lib/: api.js  colors.js  experiments.js  utils.js
frontend/src/pages/: ComparisonPage.jsx  ConversationsPage.jsx  DashboardHome.jsx  EmbeddingPage.jsx  ExperimentOverview.jsx  GenealogyPage.jsx  IslandsPage.jsx  LLMAnalyticsPage.jsx  MetaScratchpadPage.jsx  MetricsPage.jsx  ProgramBrowser.jsx  ProgramDetailPage.jsx  StatsPage.jsx
frontend/src/stores/: experimentStore.js  uiStore.js  websocketStore.js
tests/: conftest.py
tests/integration/: test_api_frameworks.py  test_change_detection.py  test_experiment_manager.py
tests/unit/: test_config_loading.py  test_detect_openevolve.py  test_detect_shinkaevolve.py  test_registry.py  test_unified_model.py
(+35 files in other folders)
