[project]
name = "evollm-dashboard"
version = "1.0.0"
description = "Real-time monitoring dashboard for OpenEvolve and ShinkaEvolve"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]

[project.scripts]
dashboard = "backend.main:app"

[tool.setuptools]
packages = ["backend", "backend.adapters", "backend.models", "backend.services", "backend.api", "configs", "configs.projects"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
